--- a/pytest.ini
+++ b/pytest.ini
@@ -1,13 +1,13 @@
 [pytest]
-;addopts = --foo='ya.ru'
+addopts = --foo='ya.ru'
 ;addopts = --foo='google.ru'
 
 
 
 # turn on to show how to register mark
-;markers =
-;  smoke: Run the smoke test test functions
-;  my_mark: my mark
+markers =
+  smoke: Run the smoke test test functions
+  my_mark: my mark
 
 
-xfail_strict = true
+;xfail_strict = false
